Add Delete Vaccine

--- a/style.css
+++ b/style.css
@@ -42,3 +42,11 @@ div#nurseInfo{
     width: 500px;
     margin: auto;
 }
+
+div#homeDiv{
+    margin:auto;
+    width:1000px;
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 50px;
+}
